# src/infra/controller/Order.ts
@@ -2,6 +2,7 @@ import { EventPublisher } from "@/application/event";
 import { OrderRepository } from "@/application/repository";
 import { CompleteOrderPreparation} from "@/application/usecase";
 import HttpServer, { ResponseNoContent, ResponseOK } from "../http/HttpServer";
+import { FinishOrder } from "@/application/usecase/FinishOrder";
 
 export class OrderController {
   static registerRoutes(
@@ -9,13 +10,23 @@ export class OrderController {
     orderRepository: OrderRepository,
     eventPublisher: EventPublisher,
   ) {
-    const completePreparationUseCase = new CompleteOrderPreparation(
+    const completeOrderPreparationUseCase = new CompleteOrderPreparation(
+      orderRepository,
+      eventPublisher
+    );
+    const finishOrderUseCase = new FinishOrder(
       orderRepository,
       eventPublisher
     );
 
     httpServer.patch("/orders/:id/ready", (request) => {
-      return completePreparationUseCase
+      return completeOrderPreparationUseCase
+        .execute({ orderId: request.params.id })
+        .then(ResponseNoContent);
+    });
+
+    httpServer.patch("/orders/:id/finish", (request) => {
+      return finishOrderUseCase
         .execute({ orderId: request.params.id })
         .then(ResponseNoContent);
     });
